--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@coreui/coreui-free-angular-admin-template",
+  "name": "ServiceHub",
   "version": "2.9.2",
   "description": "CoreUI Free Angular 2+ Admin Template",
   "author": {
@@ -19,6 +19,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "start": "ng serve",
     "build": "ng build --prod --aot --buildOptimizer --commonChunk --vendorChunk --optimization --progress",
     "test": "ng test",
@@ -35,6 +36,9 @@
     "@angular/platform-browser": "^9.1.1",
     "@angular/platform-browser-dynamic": "^9.1.1",
     "@angular/router": "^9.1.1",
+    "@coreui/angular": "^2.9.2",
+    "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
+    "@coreui/icons": "0.3.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "core-js": "^2.6.11",
