--- a/package.json
+++ b/package.json
@@ -52,9 +52,12 @@
     "tslib": "^1.11.1",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.3",
-	"@angular/cli": "^9.1.1",
+    "@angular/cli": "^9.1.1",
     "@angular/compiler-cli": "^9.1.1",
-    "@angular/language-service": "^9.1.1"
+    "@angular/language-service": "^9.1.1",
+    "ts-node": "^8.8.2",
+    "tslint": "^6.1.1",
+    "typescript": "~3.7.5"
   },
   "engines": {
     "node": ">= 10.13",
