--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "tslib": "^1.11.1",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.3",
+	"@angular-devkit/build-angular": "~0.901.1",
     "@angular/cli": "^9.1.1",
     "@angular/compiler-cli": "^9.1.1",
     "@angular/language-service": "^9.1.1",
